--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# env files
+/env/*
+.env
+.env.local
+.env.*.local
+
+# db files
+/db/*
