--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "dotenv -e ./.env.test -- jest --watch --maxWorkers=1",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts",
+    "test:e2e:watch": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts --watch --maxWorkers=1",
+    "migrate:create:dev": "dotenv -e ./.env -- typeorm migration:create ./database/migrations/development",
+    "migrate:create:test": "dotenv -e ./.env.test -- typeorm migration:create ./database/migrations/test"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
