--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "dotenv -e ./.env.development -- nest start",
+    "start:dev": "dotenv -e ./.env.development -- nest start --watch",
+    "start:debug": "dotenv -e ./.env.development -- nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "jest:help": "jest --help",
     "test": "dotenv -e ./.env.test -- jest --maxWorkers=1",
     "test:watch": "dotenv -e ./.env.test -- jest --watch --maxWorkers=1",
-    "test:cov": "jest --coverage",
+    "test:cov": "dotenv -e ./.env.test -- jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts",
     "test:e2e:watch": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts --watch --maxWorkers=1",
