--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:e2e": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts",
     "test:e2e:watch": "dotenv -e ./.env.test -- jest --config ./test/jest-e2e.ts --watch --maxWorkers=1",
     "migrate:create:dev": "dotenv -e ./.env -- typeorm migration:create ./database/migrations/development",
-    "migrate:create:test": "dotenv -e ./.env.test -- typeorm migration:create ./database/migrations/test"
+    "migrate:create:test": "dotenv -e ./.env.test -- typeorm migration:create ./database/migrations/test",
+    "migrate:generate:dev": "dotenv -e ./.env -- typeorm-ts-node-esm migration:generate -d ./config/typeorm-mysql-migration-config-dev.ts ./database/migrations/development"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -59,8 +60,8 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.7.4"
   }
 }
